# token-saver-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  compose.api-docker-control.yaml  compose.api.yaml  compose.docker-control.yaml  compose.yaml  config.example.toml  docker.env.example  pyproject.toml
.github/workflows/: test.yml
src/token_saver/: __init__.py  api.py  cli.py  compression.py  config.py  deploy.py  editor.py  orchestrator.py  prompts.py  providers.py  router.py  store.py  telegram.py  types.py  verifier.py  workspace.py
tests/: test_api.py  test_codex_provider.py  test_config.py  test_deploy.py  test_editor.py  test_llama_provider.py  test_orchestrator.py  test_router.py  test_telegram.py
